Fix to mobile navigation so that search/admin drop down items are not shown when menu is expanded(search is shown directly in header bar and admin option/menu is in footer on mobile view).

--- a/themes/suiteresponsive/css/style.css
+++ b/themes/suiteresponsive/css/style.css
@@ -4591,10 +4591,12 @@ table legend {
         display:block;
         width:100%;
     }
+    #usermenucollapsed{margin:0 0 0 5px;display:none;}
+    #searchbutton{display:none;}
 }
 
 #pagecontent {
-    padding:10px;
+    margin:10px auto;
 }
 
 /* End CSS */
